--- a/locales/de.json
+++ b/locales/de.json
@@ -11,20 +11,20 @@
     "You’ve successfully subscribed to": "Du wurdest erfolgreich angemeldet für",
     "A collection of posts": "Eine Sammlung von Artikeln",
     "A collection of 1 post": "Eine Sammlung von einem Artikel",
-    "A collection of % posts": "Eine Sammlung von % Artikel",
-    "Get the latest posts delivered right to your inbox": "Erhalte die neusten Artikel direkt in deine Mailbox",
-    "Go to the front page": "Go to the front page",
-    "Latest Posts": "Neuster Artikel",
-    "Message:": "Message:",
-    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>More posts</a> by {name}",
+    "A collection of % posts": "Eine Sammlung von % Artikeln",
+    "Get the latest posts delivered right to your inbox": "Erhalte die neusten Artikel direkt in dein Postfach",
+    "Go to the front page": "Gehe zur Startseite",
+    "Latest Posts": "Neuste Artikel",
+    "Message:": "Fehlermeldung:",
+    "<a href='{url}'>More posts</a> by {name}": "<a href='{url}'>Weitere Artikel</a> von {name}",
     "No posts": "Keine Artikel",
     " (Page %)": " (Seite %)",
     "Read More": "Weiterlesen",
-    "Read <a href='{url}'>more posts</a> by this author": "Lese <a href='{url}'>mehr Artikel</a> von diesem Autor",
+    "Read <a href='{url}'>more posts</a> by this author": "Lese <a href='{url}'>weitere Artikel</a> von diesem Autor",
     "Ref:": "Ref:",
     "See all % posts": "Zeige alle % Artikel",
     "Share this": "Teile dies",
-    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Bleibe auf dem Laufenden! Erhalte alle neuen Artikel direkt in deine Mailbox geliefert",
+    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Bleibe auf dem Laufenden! Erhalte alle neuen Artikel direkt in dein Postfach",
     "This post was a collaboration between": "Dieser Artikel war eine Zusammenarbeit zwischen",
     "youremail@example.com": "deine@emailadresse.de",
     "1 post": "1 Artikel",
