--- a/locales/tr.json
+++ b/locales/tr.json
@@ -9,9 +9,9 @@
    "with the email address":"e-posta adresi ile",
    "Your email address":"E-posta adresin",
    "You’ve successfully subscribed to":"Başarıyla abone oldunuz ",
-   "A collection of posts":"Yazı topluluğu",
-   "A collection of 1 post":"1 yazı topluluğu",
-   "A collection of % posts":"% yazı topluluğu",
+   "A collection of posts":"Yazılar",
+   "A collection of 1 post":"1 yazı",
+   "A collection of % posts":"% yazı",
    "Get the latest posts delivered right to your inbox":"Son paylaşılan içerikler gelen kutuna gelsin",
    "Go to the front page":"Anasayfaya git",
    "Latest Posts":"Son Yazılar",
