--- a/locales/hu.json
+++ b/locales/hu.json
@@ -12,19 +12,19 @@
     "A collection of posts": "Cikkek gyűjteménye",
     "A collection of 1 post": "Itt csupán egy cikk van",
     "A collection of % posts": "% cikk gyűjteménye",
-    "Get the latest posts delivered right to your inbox": "Olvasd a legfrissebb cikkeket egyenesen a virtuális postaládádból",
+    "Get the latest posts delivered right to your inbox": "Olvasd a legfrissebb cikkeket egyenesen az e-maileid közül",
     "Go to the front page": "Vissza a kezdőlapra",
     "Latest Posts": "Legfrissebb cikkek",
-    "Message:": "Message:",
+    "Message:": "Üzenet:",
     "<a href='{url}'>More posts</a> by {name}": "{name} <a href='{url}'>többi cikkei</a>",
     "No posts": "Nincsenek cikkek",
-    " (Page %)": " (%). oldal",
+    " (Page %)": " (%. oldal)",
     "Read More": "Olvass tovább",
     "Read <a href='{url}'>more posts</a> by this author": "Olvass <a href='{url}'>többet</a> tőle",
     "Ref:": "Ref:",
     "See all % posts": "% cikk van hátra. Olvasd el",
     "Share this": "Oszd meg!",
-    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Maradj informált! Kapd meg a legfrissebb bejegyzéseket közvetlenül a virtuális postaládádba",
+    "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Maradj informált! Kapd meg a legfrissebb bejegyzéseket közvetlenül az e-mail fiókodba",
     "This post was a collaboration between": "Ők írták ezt:",
     "youremail@example.com": "youremail@example.com",
     "1 post": "1 cikk",
