--- a/locales/hu.json
+++ b/locales/hu.json
@@ -26,7 +26,7 @@
     "Share this": "Oszd meg!",
     "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Maradj informált! Kapd meg a legfrissebb bejegyzéseket közvetlenül az e-mail fiókodba",
     "This post was a collaboration between": "Ők írták ezt:",
-    "youremail@example.com": "youremail@example.com",
+    "youremail@example.com": "email@domain.hu",
     "1 post": "1 cikk",
     "% posts": "% cikk",
     "1 min read": "1 perces",
